# document-analyzer

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  eval_traces.jsonl  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: generate.prompt.md  implement.prompt.md  planning.prompt.md
documents/: chroma-setup.md  diagram.md  postgres-setup.md
examples/: chroma_demo.py
src/document_analyzer/: __init__.py  __main__.py  cli.py  main.py
src/document_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/document_analyzer/analyzer-agent/: agent.py  config.py  prompts.py  tools.py
src/document_analyzer/api/: router.py
src/document_analyzer/core/: config.py  logging.py
src/document_analyzer/models/: chat.py  chunking.py
src/document_analyzer/services/: analyze_document.py  chroma_client.py  chunking_service.py  embedding_service.py  evaluation_service.py  postgres_client.py  prompt_builder.py  together_client.py
