[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-analyzer"
version = "0.1.0"
description = "Terminal-first FastAPI scaffold for Together AI projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "together>=1.5,<2.0",
  "uvicorn[standard]>=0.34,<1.0",
  "openai>=2.20.0,<3.0",
  "requests>=2.31,<3.0",
  "chromadb>=1.0.0,<2.0",
  "langchain-text-splitters>=0.1.0,<1.0",
  "unstructured[pdf]>=0.16,<1.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.scripts]
document-analyzer = "document_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
